--- a/.travis.yml
+++ b/.travis.yml
@@ -11,3 +11,8 @@ install: "pip install -r reqs/test.txt"
 script: pytest --cov=hamplify
 
 after_success: coveralls
+
+notifications:
+  email:
+    on_success: never
+    on_failure: always
